--- a/resources/words.sass
+++ b/resources/words.sass
@@ -199,7 +199,6 @@ input[type="search"]::-webkit-search-results-decoration
       display: none
 
 .modify
-  // background: #82db78
   display: flex
   justify-content: space-evenly
   align-items: center
@@ -215,7 +214,6 @@ input[type="search"]::-webkit-search-results-decoration
 
 .text
   +main-results
-  // background: #ec61ea
   width: 297.5px
   +e('paragraph')
     display: flex
@@ -236,7 +234,6 @@ input[type="search"]::-webkit-search-results-decoration
 
 .user-text
   +main-results
-  // background: #997e3c
   width: 297.5px
   +e('paragraph')
     display: flex
@@ -258,25 +255,19 @@ input[type="search"]::-webkit-search-results-decoration
 
 .date
   +main-results
-  // background: #d2aa8d
   width: 150px
   +e('paragraph')
 
 .website
   overflow: auto
   +main-results
-  // background: #ddabf6
   width: 250px
   +e('paragraph')
-    display: flex
-    justify-content: center
-    align-items: center
     width: 100%
 
 .favorite, .not-favorite
   +main-results
   user-select: none
-  // background: #12b1c6
   width: 50px
   +e('icon')
     cursor: pointer
